# hexecontastich

./: Cargo.toml  progress.tsv  structure.md
docs/: 2020-09-26-scansion.html  2020-09-26.html  2020-10-11-scansion.html  2020-10-11.html  2020-10-25-scansion.html  2020-10-25.html  2020-12-11-1-scansion.html  2020-12-11-1.html  2020-12-11-2-scansion.html  2020-12-11-2.html  2020-12-11-3-scansion.html  2020-12-11-3.html  2020-12-20-1-scansion.html  2020-12-20-1.html  2020-12-20-2-scansion.html  2020-12-20-2.html  2021-01-08-1-scansion.html  2021-01-08-1.html  2021-01-08-2-scansion.html  2021-01-08-2.html  2021-01-08-3-scansion.html  2021-01-08-3.html  2021-01-10-scansion.html  2021-01-10.html  2021-01-14-scansion.html  2021-01-14.html  2021-01-15-scansion.html  2021-01-15.html  2021-02-04-scansion.html  2021-02-04.html  2021-02-07-1-scansion.html  2021-02-07-1.html  2021-02-07-2-scansion.html  2021-02-07-2.html  2021-02-07-3-scansion.html  2021-02-07-3.html  2021-02-09-scansion.html  2021-02-09.html  2021-03-21-scansion.html  2021-03-21.html  (+54 more)
raw/: 2020-09-26  2020-10-11  2020-10-25  2020-12-11-1  2020-12-11-2  2020-12-11-3  2020-12-20-1  2020-12-20-2  2021-01-08-1  2021-01-08-2  2021-01-08-3  2021-01-10  2021-01-14  2021-01-15  2021-02-04  2021-02-07-1  2021-02-07-2  2021-02-07-3  2021-02-09  2021-03-21  2021-03-25  2021-04-11  2021-06-06  2021-07-11  2021-08-15  2021-08-18  2021-09-01  2021-09-22  2021-09-24  2021-09-27  2021-09-29  2021-10-04  2021-10-06  2021-10-13  2021-11-01  2022-03-09  2022-06-21-1  2022-06-21-2  2022-06-21-3  2022-09-10-1  (+5 more)
src/: convert.rs  lib.rs  (+5 more)
(+2 files in other folders)
