[package]
name = "hexecontastich"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
itertools = "0.10.0"